# scrollkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  error_log  makefile  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
archive/: http_client_original.py
demos/: README.md  _demo_support.py  render_gifs.py  render_hero.py  render_reference.py
demos/easy/: clock.py  colors.py  drip_splash.py  hello_world.py  reveal_splash.py
demos/hard/: crypto_dashboard.py  showcase.py  showcase_reel.py  swarm_reveal.py
demos/medium/: configurable_message.py  drip_value.py  golden_transition.py  gradient_text.py  image_intro.py  rainbow.py  temperature.py  walking_ostrich.py
docs/: demos.md  getting-started.md  index.md  reference.md  sample-project.md
docs/guide/: app.md  architecture.md  bitmap-text.md  character-animation.md  config.md  device-setup.md  display.md  effects.md  gradient-text.md  hardware.md  networking.md  ota.md  palette-treatments.md  performance.md  scrolling.md  simulator.md  transitions.md  utils.md  visual-reference.md  web.md
docs/stylesheets/: landing.css
docs/tutorials/: easy.md  hard.md  medium.md
plans/: DEMO_BUG_AUDIT.md  SCROLLKIT_SEPARATION_PLAN.md  SCROLLKIT_STUDIO_SPECIFY_INPUT.md  SCROLLKIT_TASKS.md  SLDK_Refactoring_Plan.md  showcase-demo-continuation.md
sldk/: PHASE1_COMPLETE.md  README.md  conftest.py  pytest.ini
sldk/examples/: __init__.py  reveal_effect_async_demo.py  reveal_effect_demo.py  reveal_effect_sldk_demo.py  reveal_effect_working_demo.py  test_import_fix.py  test_results_report.md
sldk/examples/simulator/: debug_scrolling.py  simple_static_test.py
sldk/examples/tutorial/: 01_hello_minimal.py  02_colors_minimal.py  03_clock_minimal.py  04_basic_patterns.py  05_progressive_demo.py  README.md  __init__.py
sldk/src/sldk/: __init__.py  cli.py  content_classes.py
sldk/src/sldk.egg-info/: PKG-INFO  SOURCES.txt
sldk/test/: __init__.py
sldk/test/integration/: test_app_integration.py  test_error_handling.py  test_exceptions.py
sldk/test/unit/: __init__.py
sldk/tools/manual_tests/: README.md  test_imports.py  test_led_display.py  test_web_imports.py  visual_effects_demo.py
specs/001-feature-merge-scrollkit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-feature-merge-scrollkit/contracts/: app_contract.py  content_queue_contract.py  display_contract.py  ota_contract.py
specs/002-build-scrollkit-showcase/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-build-scrollkit-showcase/contracts/: README.md  feasibility-gate.md  foundation-primitives.md  showcase-effects.md
src/: app.py  main.py  themeparkwaits.py
src/api/: theme_park_service.py
src/config/: settings_manager.py
src/models/: theme_park_list.py  vacation.py
src/network/: dev_web_server.py  http_client.py  unified_web_server.py  web_server.py  web_server_core.py
src/scrollkit/: __init__.py  content.py  content_classes.py  exceptions.py
src/scrollkit/app/: __init__.py  base.py  memory.py  minimal.py
src/scrollkit/config/: settings_manager.py  transition_names.py
src/scrollkit/dev/: __init__.py  capabilities.py  harness.py  metrics.py  performance.py  validation.py
src/scrollkit/display/: __init__.py  _graphics.py  _recording.py  _sim_backend.py  bitmap_text.py  boards.py  colors.py  content.py  display_factory.py  enhanced_content.py  generic_display.py  gradient_text.py  interface.py  manager.py  message_queue.py  queue.py  roller_coaster_animation.py  simulator.py  strategy.py  text_fill.py  text_pixels.py  unified.py
src/scrollkit/effects/: __init__.py  base.py  basic_transitions.py  drip_splash.py  easing.py  effects.py  image_animators.py  overlay.py  palette_partition.py  palette_treatments.py  particles.py  reveal.py  reveal_splash.py  scrolling.py  swarm_reveal.py  swirl_in.py  text_render.py  transitions.py
src/scrollkit/network/: http_client.py  http_response_patch.py  mdns.py  server_adapters.py  wifi_manager.py
src/scrollkit/ota/: __init__.py  client.py  display_progress.py  manifest.py  ota_updater.py  publish.py  server.py  updater.py
src/scrollkit/simulator/: __init__.py  bitmaptools.py
src/scrollkit/utils/: color_utils.py  diagnostics.py  error_handler.py  image_processor.py  scheduler.py  system_utils.py  timer.py  url_utils.py
src/scrollkit/web/: __init__.py  adapters.py  forms.py  handlers.py  server.py  settings_server.py  templates.py  wifi_setup.py
src/ui/: display_base.py  display_factory.py  hardware_display.py  message_queue.py  reveal_animation.py  simulator_display.py  sldk_simulator_display.py  unified_display.py
test/: README.md  conftest.py  helpers.py  memory_baseline.py
test/claude/: RELIABILITY_TESTING.md  _run_showcase_device.py  bitmaptools_golden.py  calibrate_device.py  cpy_repl.py  device_benchmarks.py  reliability_harness.py  smoke_interstate75w.py  smoke_matrixportal_s3.py  spike_pyodide_render.py  verify_font_baseline.py
test/claude/pyodide_spike/: run.cjs
test/fixtures/: memory_baseline.json
test/packaging/: wheel_smoke.py
test/themeparkwaits/: README.md
test/unit/: conftest.py  test_circuitpython_compat.py  test_demo_regressions.py  test_removed_apis.py
test/unit/api/: test_theme_park_service.py
test/unit/app/: test_app_render_smoke.py  test_app_resilience.py  test_demo_smoke.py  test_minimal_app.py  test_render_suspend.py  test_sldk_app.py
test/unit/config/: test_settings_manager.py  test_settings_schema.py
test/unit/content/: test_content_classes.py
test/unit/contract/: test_app_contract.py  test_content_queue_contract.py
test/unit/demos/: test_golden_transition.py  test_showcase_reel.py
test/unit/dev/: test_capabilities.py  test_dev_import_safety.py  test_harness.py  test_performance.py  test_validation.py
test/unit/display/: bitmaptools_golden.json  test_bitmap_text.py  test_bitmaptools_shim.py  test_boards.py  test_content_queue.py  test_gradient_text.py  test_layers.py  test_painters.py  test_pixel_contract.py  test_scrolling_text.py  (+3 more)
(+105 files in other folders)
