[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrollkit"
version = "0.8.0"
description = "LED Matrix Display Framework for CircuitPython and Desktop"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "3DUPFitters LLC"}
]
keywords = ["circuitpython", "led-matrix", "display", "matrixportal", "simulator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
# The desktop simulator needs numpy (pixel buffer / LED matrix) + pygame + Pillow.
# These are simulator-only — the base package and the on-device (CircuitPython)
# path must stay dependency-free.
simulator = ["pygame>=2.0", "Pillow>=9.0", "numpy>=1.21"]
web = ["aiohttp>=3.8"]
# dev pulls in the simulator so `pip install -e .[dev]` is the single command that
# gets everything the test suite needs (it runs against the simulator).
dev = ["scrollkit[simulator]", "pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "pytest-timeout>=2.1", "ruff>=0.1", "requests>=2.28"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0", "mkdocstrings[python]>=0.24"]

[project.urls]
Homepage = "https://github.com/czei/scrollkit"
Repository = "https://github.com/czei/scrollkit"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scrollkit*"]