[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrollkit"
version = "0.9.1"
description = "LED Matrix Display Framework for CircuitPython and Desktop"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Michael Czeiszperger", email = "michael@czei.org"}
]
keywords = ["circuitpython", "led-matrix", "display", "matrixportal", "simulator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
# The desktop simulator needs numpy (pixel buffer / LED matrix) + pygame + Pillow.
# These are simulator-only — the base package and the on-device (CircuitPython)
# path must stay dependency-free.
simulator = ["pygame>=2.0", "Pillow>=9.0", "numpy>=1.21"]
# Desktop settings web UI — provides the ``adafruit_httpserver`` module that
# SettingsWebServer lazy-imports (stdlib socket as the pool). On CircuitPython
# the same module comes from the Adafruit bundle, not pip.
web = ["adafruit-circuitpython-httpserver>=4.0"]
# dev pulls in the simulator so `pip install -e .[dev]` is the single command that
# gets everything the test suite needs (it runs against the simulator).
dev = ["scrollkit[simulator]", "pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "pytest-timeout>=2.1", "diff-cover>=9.0", "ruff>=0.1", "requests>=2.28"]
# Host-side raw-REPL smoke tools for a deliberately attached MatrixPortal S3.
# This is not part of the device library and is intentionally opt-in.
device = ["pyserial>=3.5"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0", "mkdocstrings[python]>=0.24"]

[project.urls]
Homepage = "https://github.com/czei/scrollkit"
Repository = "https://github.com/czei/scrollkit"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scrollkit*"]

# Non-.py files the wheel/sdist must carry. Without this, pip installs would
# silently drop the simulator's BDF fonts and the hardware-calibration JSONs
# (CI's editable install can't catch that — it always sees the source tree).
[tool.setuptools.package-data]
"scrollkit.simulator" = ["LICENSE", "*.md"]
"scrollkit.simulator.core" = ["*.json"]
"scrollkit.simulator.fonts" = ["*.bdf", "*.bdf.license", "LICENSE*"]
